objects/PSChatBotPackKA__mdt.object
<CustomObject>
    <fields>
        <fullName>Answer_Field_API_Name__c</fullName>
        <label>Answer Field API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chat_Answer_Field_API_Name__c</fullName>
        <label>Chat Answer Field API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Field_API_Name__c</fullName>
        <label>Image Field API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>PSChatBotPackKA</label>
    <pluralLabel>PSChatBotPackKA</pluralLabel>
</CustomObject>